<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:paddingTop="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <RadioGroup android:id="@id/radioGroup1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RadioButton android:id="@id/sensor_radio0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/auto" />
            <RadioButton android:id="@id/land_radio1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/land_scape" />
            <RadioButton android:id="@id/r_land_radio2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/r_land_scape" />
            <RadioButton android:id="@id/s_land_radio4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sensoor_land" />
            <RadioButton android:id="@id/protrat_radio3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/portrat" />
            <RadioButton android:id="@id/r_portrat_radio4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reverse_portrate" />
            <RadioButton android:id="@id/s_portrat_radio4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sensoor_portarte" />
        </RadioGroup>
    </ScrollView>
    <Button android:layout_gravity="end" android:id="@id/ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="0.0" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
</LinearLayout>
